# Safe_Trajectory_Generator

./: .rosinstall.bak  README.md
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
doxygen/: Doxyfile
doxygen/html/: _b_l_a_s_replacement_8cpp.html  _b_l_a_s_replacement_8cpp__incl.map  _b_l_a_s_replacement_8cpp__incl.md5  _bounds_8cpp.html  _bounds_8cpp__incl.map  _bounds_8cpp__incl.md5  _bounds_8hpp.html  _bounds_8hpp__dep__incl.map  _bounds_8hpp__dep__incl.md5  _bounds_8hpp__incl.map  _bounds_8hpp__incl.md5  _bounds_8hpp_source.html  _bounds_8ipp.html  _bounds_8ipp__dep__incl.map  _bounds_8ipp__dep__incl.md5  _constants_8hpp.html  _constants_8hpp__dep__incl.map  _constants_8hpp__dep__incl.md5  _constants_8hpp__incl.map  _constants_8hpp__incl.md5  _constants_8hpp_source.html  _constraint_product_8hpp.html  _constraint_product_8hpp__dep__incl.map  _constraint_product_8hpp__dep__incl.md5  _constraint_product_8hpp_source.html  _constraints_8cpp.html  _constraints_8cpp__incl.map  _constraints_8cpp__incl.md5  _constraints_8hpp.html  _constraints_8hpp__dep__incl.map  _constraints_8hpp__dep__incl.md5  _constraints_8hpp__incl.map  _constraints_8hpp__incl.md5  _constraints_8hpp_source.html  _constraints_8ipp.html  _constraints_8ipp__dep__incl.map  _constraints_8ipp__dep__incl.md5  _flipper_8cpp.html  _flipper_8cpp__incl.map  _flipper_8cpp__incl.md5  (+1006 more)
doxygen/latex/: _b_l_a_s_replacement_8cpp.tex  _b_l_a_s_replacement_8cpp__incl.md5  _bounds_8cpp.tex  _bounds_8cpp__incl.md5  _bounds_8hpp.tex  _bounds_8hpp__dep__incl.md5  _bounds_8hpp__incl.md5  _bounds_8ipp.tex  _bounds_8ipp__dep__incl.md5  _constants_8hpp.tex  _constants_8hpp__dep__incl.md5  _constants_8hpp__incl.md5  _constraint_product_8hpp.tex  _constraint_product_8hpp__dep__incl.md5  _constraints_8cpp.tex  _constraints_8cpp__incl.md5  _constraints_8hpp.tex  _constraints_8hpp__dep__incl.md5  _constraints_8hpp__incl.md5  _constraints_8ipp.tex  _constraints_8ipp__dep__incl.md5  _flipper_8cpp.tex  _flipper_8cpp__incl.md5  _flipper_8hpp.tex  _flipper_8hpp__dep__incl.md5  _flipper_8hpp__incl.md5  _indexlist_8cpp.tex  _indexlist_8cpp__incl.md5  _indexlist_8hpp.tex  _indexlist_8hpp__dep__incl.md5  _indexlist_8hpp__incl.md5  _indexlist_8ipp.tex  _indexlist_8ipp__dep__incl.md5  _l_a_p_a_c_k_replacement_8cpp.tex  _l_a_p_a_c_k_replacement_8cpp__incl.md5  _lapack_blas_replacement_8hpp.tex  _lapack_blas_replacement_8hpp__dep__incl.md5  _matrices_8cpp.tex  _matrices_8cpp__incl.md5  _matrices_8hpp.tex  (+469 more)
logs/franka_control/: build.make.2278.log.stderr  build.make.2517.log.stderr
logs/franka_msgs/: build.make.000.log.stderr
logs/moveit_tutorials/: build.make.000.log.stderr
logs/moveit_visual_tools/: build.make.001.log.stderr
logs/panda_mpc/: build.check.003.log.stderr  build.check.022.log.stderr  build.check.023.log.stderr  build.check.024.log.stderr  build.check.025.log.stderr  build.check.036.log.stderr  build.check.1416.log.stderr  build.check.1490.log.stderr  build.check.617.log.stderr  build.check.633.log.stderr  build.cmake.003.log.stderr  build.cmake.007.log.stderr  build.cmake.008.log.stderr  build.cmake.009.log.stderr  build.cmake.010.log.stderr  build.cmake.011.log.stderr  build.cmake.016.log.stderr  build.cmake.018.log.stderr  build.cmake.022.log.stderr  build.make.002.log.stderr  build.make.011.log.stderr  build.make.014.log.stderr  build.make.015.log.stderr  build.make.017.log.stderr  build.make.018.log.stderr  build.make.020.log.stderr  build.make.025.log.stderr  build.make.032.log.stderr  build.make.039.log.stderr  build.make.040.log.stderr  build.make.041.log.stderr  build.make.058.log.stderr  build.make.059.log.stderr  build.make.060.log.stderr  build.make.063.log.stderr  build.make.066.log.stderr  build.make.069.log.stderr  build.make.071.log.stderr  build.make.075.log.stderr  build.make.081.log.stderr  (+170 more)
src/panda_mpc/: CMakeLists.txt  panda_mpc_plugin.xml
src/panda_mpc/config/: panda_mpc.yaml  param.yaml
src/panda_mpc/examples/: CMakeLists.txt  build_trajectory.cpp  qptest.cpp  test_plane_solver.cpp  tf_broadcast.cpp  trajectory_send.cpp
src/panda_mpc/include/: panda_controller.h
src/panda_mpc/include/controller/: controller.hpp  joint_velocity_example_controller.h  vel_controller.hpp
src/panda_mpc/include/optFormulation/: constraint.hpp  qpsolver.h  task.hpp
src/panda_mpc/include/planning/: cubic_spline.h  plane.h  plane_solver.h  plane_solver_old.h  qpstructure.h  traj_generation.hpp
src/panda_mpc/include/robot/: panda_controller.h  panda_mpc.h  robot_model.h  robot_mpc_model.h
src/panda_mpc/launch/: robot.rviz  run.launch
src/panda_mpc/msg/: trajectoryAcceleration.msg  trajectoryMsg.msg
src/panda_mpc/scripts/: tensorflow_test.py
src/panda_mpc/src/: controller.cpp  load_trajectory.py  panda_controller.cpp  panda_simulation.cpp  qpsolver.cpp  robot_model.cpp  robot_mpc_model.cpp
src/panda_mpc/src/controller/: controller.cpp  joint_velocity_example_controller.cpp  vel_controller.cpp
src/panda_mpc/src/optFormulation/: constraint.cpp  qpsolver.cpp  task.cpp
src/panda_mpc/src/planning/: cubic_spline.cpp  motion_generator.cpp  plane.cpp  plane_solver.cpp  plane_solver_old.cpp  qpstructure.cpp  traj_generation.cpp
src/panda_mpc/src/robot/: panda_mpc.cpp  robot_model.cpp  robot_mpc_model.cpp
src/panda_mpc/srv/: UpdateTrajectoryNextPoint.srv
(+883 files in other folders)
